--- a/src/Administration/Resources/app/administration/src/app/component/entity/sw-category-tree-field/sw-category-tree-field.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/entity/sw-category-tree-field/sw-category-tree-field.scss
@@ -73,6 +73,10 @@ $sw-category-tree-field-transition-results: all ease-in-out 0.2s;
         height: 100%;
     }
 
+    .sw-category-tree-field__results .sw-tree .sw-tree__content {
+        min-height: 200px;
+    }
+
     .sw-tree-item .sw-field--checkbox {
         margin-bottom: 0;
     }
