NEXT-20638 - Add missing semicolon

--- a/src/Storefront/Resources/app/storefront/src/scss/page/checkout/_cart-item-children.scss
+++ b/src/Storefront/Resources/app/storefront/src/scss/page/checkout/_cart-item-children.scss
@@ -19,7 +19,7 @@
     }
 
     .cart-item-children-elements > div:first-of-type {
-        padding: 20px 4px 0
+        padding: 20px 4px 0;
     }
 
     .cart-item-headline {
