--- a/src/Administration/Resources/app/administration/src/module/sw-sales-channel/product-export-templates/billiger-de/body.csv.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-sales-channel/product-export-templates/billiger-de/body.csv.twig
@@ -5,7 +5,9 @@
 "{{ product.translated.name|length > 80 ? product.translated.name|slice(0, 80) ~ '...' : product.translated.name }}",{#- -#}
 "{{ product.translated.description|raw|length > 900 ? product.translated.description|raw|slice(0,900) ~ '...' : product.translated.description|raw }}{#- -#}
 ",{#- -#}
-"{{ product.categories.count > 0 ? product.categories.first.getBreadCrumb|slice(1)|join(' > ')|raw ~ '' }}",{#- -#}
+"{%- if product.categories.count > 0 -%}
+    {{ product.categories.first.getBreadCrumb|slice(1)|join(' > ')|raw }}{#- -#}
+{%- endif -%}",{#- -#}
 {% set price = product.calculatedPrice %}
 {%- if product.calculatedPrices.count > 0 -%}
     {% set price = product.calculatedPrices.last %}
@@ -15,7 +17,7 @@
     {{ price.referencePrice.price|currency }} / {{ price.referencePrice.referenceUnit }} {{ price.referencePrice.unitName }}{#- -#}
 {%- endif -%}",{#- -#}
 "{{ seoUrl('frontend.detail.page', {'productId': product.id}) }}",{#- -#}
-"{{ product.cover ? product.cover.media.url ~ '' }}",{#- -#}
+"{% if product.cover is not null %}{{ product.cover.media.url }}{% endif %}",{#- -#}
 "{%- if product.availableStock >= product.minPurchase and product.deliveryTime -%}
     {{ "detail.deliveryTimeAvailable"|trans({'%name%': product.deliveryTime.translation('name')}) }}{#- -#}
 {%- elseif product.availableStock < product.minPurchase and product.deliveryTime and product.restockTime -%}
