--- a/src/Administration/Resources/app/administration/src/module/sw-sales-channel/product-export-templates/google-product-search-de/body.xml.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-sales-channel/product-export-templates/google-product-search-de/body.xml.twig
@@ -3,7 +3,9 @@
     <title>{{ product.translated.name|escape }}</title>
     <description>{{ product.translated.description|escape }}</description>
     <g:google_product_category>950{# change your Google Shopping category #}</g:google_product_category>
-    <g:product_type>{{ product.categories.count > 0 ? product.categories.first.getBreadCrumb|slice(1)|join(' > ')|raw|escape ~ '' }}</g:product_type>
+    {%- if product.categories.count > 0 -%}
+        <g:product_type>{{ product.categories.first.getBreadCrumb|slice(1)|join(' > ')|raw|escape }}</g:product_type>
+    {%- endif -%}
     <link>{{ seoUrl('frontend.detail.page', {'productId': product.id}) }}</link>
     {% if product.cover.media is defined %}<g:image_link>{{ product.cover.media.url }}</g:image_link>{% endif %}
     <g:condition>new</g:condition>
