--- a/src/Administration/Resources/app/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-detail/sw-settings-shipping-detail.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-detail/sw-settings-shipping-detail.html.twig
@@ -70,7 +70,7 @@
                     :is-loading="isLoading"
                 >
                     <sw-container
-                        columns="repeat(auto-fit, minmax(250px, 1fr))"
+                        columns="5fr 1fr 1fr"
                         gap="0px 30px"
                     >
                         {% block sw_settings_shipping_detail_base_content_field_name %}
@@ -82,6 +82,16 @@
                             :error="shippingMethodNameError"
                             :label="$tc('sw-settings-shipping.detail.labelName')"
                             :placeholder="placeholder(shippingMethod, 'name', $tc('sw-settings-shipping.detail.placeholderName'))"
+                        />
+                        {% endblock %}
+                        {% block sw_settings_shipping_detail_base_content_field_position %}
+                        <sw-field
+                            v-model="shippingMethod.position"
+                            type="number"
+                            class="sw-settings-shipping-detail__field-position"
+                            :disabled="!acl.can('shipping.editor')"
+                            :label="$tc('sw-settings-shipping.detail.labelPosition')"
+                            :placeholder="$tc('sw-settings-shipping.detail.placeholderPosition')"
                         />
                         {% endblock %}
                         {% block sw_settings_shipping_detail_base_content_field_active %}
