NEXT-19249 - Clearer Status for Customer

--- a/src/Administration/Resources/app/administration/src/module/sw-customer/component/sw-customer-base-info/sw-customer-base-info.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-customer/component/sw-customer-base-info/sw-customer-base-info.html.twig
@@ -92,7 +92,7 @@
                 <sw-checkbox-field
                     v-model="customer.active"
                     class="sw-customer-base-info__checkbox-field"
-                    :label="$tc('sw-customer.baseInfo.contentActive', customer.active)"
+                    :label="$tc('sw-customer.baseInfo.contentActive')"
                     size="small"
                 />
             </dd>
