--- a/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/page/sw-bulk-edit-product/sw-bulk-edit-product.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/page/sw-bulk-edit-product/sw-bulk-edit-product.scss
@@ -72,6 +72,18 @@
         width: 100%;
     }
 
+    .sw-bulk-edit-product-base__advanced-prices {
+        .sw-bulk-edit-change-type {
+            position: relative;
+        }
+
+        .sw-inheritance-switch {
+            position: absolute;
+            top: 15px;
+            left: -30px;
+        }
+    }
+
     .sw-product-media-form .sw-product-media-form__previews {
         grid-template-columns: none;
     }
