NEXT-20783 - Fix category urls via cms text editor

--- a/src/Administration/Resources/app/administration/src/app/component/form/sw-text-editor/sw-text-editor-link-menu/sw-text-editor-link-menu.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/form/sw-text-editor/sw-text-editor-link-menu/sw-text-editor-link-menu.html.twig
@@ -7,6 +7,7 @@
             v-model="linkCategory"
             :label="$tc('sw-text-editor-toolbar.link.labelType')"
             require
+            @change="onSelectFieldChange"
         >
             {% block sw_text_editor_toolbar_button_link_menu_content_type_options %}
             <option value="link">
